   editors (#1266)
 * Add footer, and internal and expanded views for geo map. (#1264).
 * Support 'expanded' (much higher, full-width) jacks viewer and editor (#1233)
 * Support matching on sliver_id for exosm resources status (#1231)
 * Add CloudLab button to home tools list (#1263) 
 * Remove warning about IDP has no affiliation for EPPN 
     (which is optional) (#1269).

== 2.25 ==
 * Allow for editing RSpecs in the Profile Manage RSpecs page using Jacks
   editor. (#1143).
 * Name downloaded request rspec with slice name (#1204)
 * Add aggregate categories 'Experimental' and 'Federated'. (#1239)
 * Support multiple nodes with same client_id from different AMs in SSH (#1257)
 * Support multiple nodes with same client_id from different AMs
   for AM API calls (#1258)
 * Add a geographic map view of the resources in a given slice. See
   the "Geo View" button on the Slice Jacks page. (#1260)
 * Update copyrights to 2015. (#1261)
 * Support Delete in Jacks App with multiple manifests
   (singularly or as a group) (#1265)

== 2.24 ==
 * Remove debug printouts in do-edit-slice-member. (#1242)
 * Prepare to be runnable without access to emulab.net. (#1251)
  * Host the Jacks router.svg locally
  * Make the Jacks URL be a value from settings.php
  * (Re) make the Flack URL be a value from settings.php
 * Jacks Add Resources instructs you to draw or pick an RSpec. (#1249)
 * Warn that you cannot reserve where you already have a reservation (static). (#1192)

== 2.23 ==
 * Grab latest topology from Jacks before calling validateSubmit from ReserveResources (#1126)
 * Restore highlighting of boxes on select (#1190)
 * Fix AM table view on slice-jacks  (#1187)
 * Add view rspec button to jacks app (#1202)
 * "Delete All" clears the Rspec and Reserve Resources button in Jacks Editor App (slice-add-resource-jacks) (#1191)
 * Fix map view to remove nodes with no lat/long info (#1240)
 * Fix handling of delete race-condition (delete returns before manifest 