@@ -152,10 +152,11 @@ function updateJacksContainer(rspec, rspec_id, rspec_name) {
         source: 'rspec',
         size: { x: width, y: height},
         show: {
-            rspec: false,
+	    menu: true, 
+            rspec: true,
             version: false
         },
-        nodeSelect: false,
+        nodeSelect: true,
         root: '#jacksContainer',
         readyCallback:
             function (input, output) {
